# dynamic-routing-bonsai

./: .copier-answers.yml  README.md  dynamic-routing-bonsai.sln  pyproject.toml
.github/workflows/: aind-behavior-dynamic-routing-bonsai-cicd.yml
bonsai/: Bonsai.config
docs/: api.rig.rst  api.task_logic.rst  conf.py  index.rst  json-schemas.rst
examples/: clabe.yml  rig.py  session.py  task_logic.py
scripts/: launcher.ps1
src/: main.bonsai  test_deserialization.bonsai  test_view_window.bonsai
src/DataSchemas/: .gitkeep  aind_behavior_dynamic_routing_bonsai.json
src/Extensions/: AindBehaviorDynamicRoutingBonsai.Generated.cs  ShuffleList.cs  UniformSampleList.cs
src/aind_behavior_dynamic_routing_bonsai/: cli.py  launcher.py  regenerate.py  rig.py  task_logic.py
src/aind_behavior_dynamic_routing_bonsai/data_contract/: __init__.py
src/aind_behavior_dynamic_routing_bonsai/data_mappers/: __init__.py  _rig.py  _session.py
src/aind_behavior_dynamic_routing_bonsai/data_qc/: __init__.py  data_qc.py
tests/: test_aind_data_mapper.py  test_bonsai.py
